homepage and navbar update

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,3 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes moveLeftRight {
+  0% {
+    transform: translateX(-10px); /* Move left */
+  }
+  50% {
+    transform: translateX(10px); /* Move right */
+  }
+  100% {
+    transform: translateX(-10px); /* Move left */
+  }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: none;
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+.animate-bounce {
+  animation: bounce 5s infinite;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px); /* Optional: Add a slight upward movement */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animate-fade-in {
+  animation: fadeIn 1s ease-in;
+}
