--- a/client/src/styles/enquiry.css
+++ b/client/src/styles/enquiry.css
@@ -1,8 +1,9 @@
 .enquire-us-container {
-  background-color: #892424;
+
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   transition: color 0.3s ease;
+  border: 1px solid #892424;
 }
 
 .enquire-us-container::before {
@@ -12,14 +13,14 @@
   left: -100%;
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: #89242482;
   z-index: 0;
   transition: left 0.3s ease;
 }
 
 .enquire-us-container:hover::before {
   left: 0;
-  border: 1px solid #892424;
+
   border-radius: 0.75rem;
 }
 
